# kompute

./: CMakeLists.txt
examples/image_copy/: CMakeLists.txt  README.md
examples/image_copy/shader/: image_copy.comp  texture_blur.comp  texture_copy.comp
examples/image_copy/src/: main.cpp
python/: CMakeLists.txt
python/src/: docstrings.hpp  main.cpp
python/test/: test_image_types.py  test_kompute.py  test_texture_types.py
src/: CMakeLists.txt  Image.cpp  ImageBase.cpp  Memory.cpp  OpAlgoDispatch.cpp  OpMemoryBarrier.cpp  Tensor.cpp  Texture.cpp
src/include/: CMakeLists.txt
src/include/kompute/: Core.hpp  Image.hpp  ImageBase.hpp  Kompute.hpp  Manager.hpp  Memory.hpp  Tensor.hpp  Texture.hpp
src/include/kompute/operations/: OpMemoryBarrier.hpp
